Template for real boiiiiii

--- a/SON/SON.tex
+++ b/SON/SON.tex
@@ -228,7 +228,7 @@ It should be noted that no data is lost in this procedure due to the eNB forward
 Sometimes, the mobility problems are so severe that the call is dropped. 
 
 \subsection{Minimization of Drive Tests (MDT)}
-Testing is very important for network operators, as it helps to collect statistics about the network. A lot of the testing done on the the network is drive tests, which consists of sending out engineers in a car, then they drive around and test the network in different areas. This requires a lot of special tools, it also takes a long time and is quite costly. Therefore, MDT is very important to network operators. The idea behind MDT is to use the UEs to measure and log information along with location, just like the drive tests. Because of the amount of users and their different behaviour this method of testing would be very thorough, and would give the network operators an exact view of what their customers are experiencing. The main use of MDT would be to optimize network coverage e.g. by detecting network "holes". 
+Testing is very important for network operators, as it helps to collect statistics about the network. A lot of the testing done on the the network is drive tests, which consists of sending out engineers in a car, then they drive around and test the network in different areas. This requires a lot of special tools, it also takes a long time and is quite costly. Therefore, MDT is very important to network operators. The idea behind MDT is to use the UEs to measure and log information along with location, just like the drive tests. Because of the amount of users and their different behaviour this method of testing would be very thorough, and would give the network operators an exact view of what their customers are experiencing. The main use of MDT would be to optimize network coverage e.g. by detecting network "holes". \cite{Sartori2012}
 
 \subsection{Energy Savings}
 Another promising area of self-optimization is energy savings. By reducing power consumption, a network operator can save money and be less taxing on the environment. In SON networks, energy consumption can be reduced both in the UE and inside the network, however, this report will focus on the energy savings that can be made within the network.
@@ -297,14 +297,13 @@ Release 9 (2008) was an improvement to release 8, and therefore many of the thin
 \subsection{LTE release 10}
 Release 10 included further enhancements to the features already present from release 8 and 9. Cell Outage Detection, enhanced ICIC (eICIC) and minimization of drive testing were main parts of release 10. 
 \subsection{LTE release 11}
-LTE release 11 included even further enhancements to MRO and energy savings. Inter-RAT energy saving management was also introduced.\cite{Atayero2014}
+LTE release 11 included even further enhancements to MRO and energy savings. Inter-RAT energy saving management was also introduced.\cite{Atayero2014} \cite{3gpp}
 
 %----------------------------------------------------------------------------------------
 %	Conclusion 
 %----------------------------------------------------------------------------------------
 \chapter{Conclusion}
 SON introduces a lot of very nice and convenient features such as eNB self-configuration, ANR, automatic configuration of PCI, MLB, MRO, MDT, energy savings, CCO, ICIC, RACH optimization, Cell outage detection and compensation, Cell degradation detection etc. These features are the most important features of SON and they are constantly getting improved as the technology advances. \\ Self-configuration makes it possible for a network operator to setup eNBs with much less trouble than before and much faster and cheaper. Self-configuration also makes eNBs aware of their neighbours and makes updating neighbour lists very easy with the introduction of ANR. \\ Self-optimization makes the whole network very efficient, while having great performance. This is done by introducing MLB, MRO, MDT, energy savings, CCO, ICIC and RACH optimization. Self-optimization has a lot of features and it is also one of the most complex parts of SON, however, it is also arguably almost the most important, as it brings a lot improvements to the network.  \\ Self-healing is the last feature of SON that this report discussed, and it is also very important as it makes the robustness of the network much higher. It also provides very important information to the network operator, such as network quality, which gives the operator a better understanding of the end-user experience. \\ SON is a very new technology that is starting to grow into the networks more and more, and could very well revolutionary in telecommunication networks. 
-
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
