--- a/template/template.tex
+++ b/template/template.tex
@@ -121,6 +121,23 @@
 % pagenumbering{roman}
 \pagenumbering{arabic}
 
+\chapter{\\ Example chapter no 1}
+
+\section{first section}
+
+\subsection{first subsection}
+
+\subsubsection{first subsubsection}
+
+\paragraph{first paragraph}
+
+\subparagraph{first subparagraph}
+
+
+
+
+
+
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
