--- a/Database/DatabaseProject.tex
+++ b/Database/DatabaseProject.tex
@@ -78,12 +78,15 @@
 %	NAME AND CLASS SECTION
 %----------------------------------------------------------------------------------------
 
-\newcommand{\hmwkTitle}{Assignment title} % Assignment title
-\newcommand{\hmwkDueDate}{Weekday,\ Month\ date,\ year} % Due date
+\newcommand{\hmwkTitle}{Mandatory Group Assignment - Handball Database} % Assignment title
+\newcommand{\hmwkDueDate}{Weekday,\ April,\ 18,\ 2018} % Due date
 \newcommand{\hmwkClass}{Course \- number} % Course/class
 \newcommand{\hmwkClassTime}{Department of ***} % Kursusansvarlig profession
 \newcommand{\hmwkClassInstructor}{Professor,} % Teacher/lecturer
 \newcommand{\hmwkAuthorName}{Frederik Rander Andersen, s164146} % Your name
+\newcommand{\hmwkAuthorNamea}{Mathias Bo Jensen, s164159} % Your name
+\newcommand{\hmwkAuthorNameb}{Frederik Kirkegaard, s165509} % Your name
+\newcommand{\hmwkAuthorNamec}{Sebastian Fischer, s164158} % Your name
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
@@ -91,14 +94,14 @@
 
 \title{
 \noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}} 
-\textmd{\huge \textbf{\hmwkClass \hmwkTitle}}\\
+\textmd{\huge \textbf{\hmwkClass \\ \hmwkTitle}}\\
 \large\vspace{0.1in}\hmwkDueDate\\
 \vspace{0.1in}\large{\textit{\hmwkClassInstructor\ \hmwkClassTime}}
 \noindent\makebox[\linewidth]{\rule{\textwidth}{1pt}} 
 \vspace{1in}
 }
 
-\author{\large\textbf{\hmwkAuthorName}}
+\author{\large\textbf{\hmwkAuthorNamea} \\ \large\textbf{\hmwkAuthorNameb} \\ \large\textbf{\hmwkAuthorNamec} \\ \large\textbf{\hmwkAuthorName}}
 \date{} % Insert date here if you want it to appear below your name
 
 
